VERSION 0.4.0

IN PROGRESS

* Global refactoring of game object classes
+ Ship inventory screen
+ Officer dialog system

=============================================

VERSION 0.3.2

17.07.2014

* Target selection popup
* Realistic planet shading
+ Bork family problems event
+ 2 new music tracks

=============================================

VERSION 0.3.1

06.06.2014

* Bugfixes
* Crafting of items on board of ship now requires resources
* Improvements for landing party screen (cancel button and hints)
+ Star systems can now have asteroid fields
+ Chance for crew members to die on aggressive planets from any wound
* Nicer fog of war border

===============================================

VERSION 0.3.0

25.05.2014

+ Star map: hints and quest locations.
+ Music tracks for all races
+ Tool to generate all dialogs in one click
* New intro
+ Ship upgrade system
+ New quests
+ In-game links for blog and bugtracker
+ Hints for interface items, tooltips with weapon parameters

=================================================

VERSION 0.2.2

01.04.2014

+ 2 new music tracks
+ Cheat to skip dungeons
+ Added surface map to planet gui
+ Added global game date to interface
* New GUI style
* Bugfix

===================================================

VERSION 0.2.1

19.03.2014

* Fixed crash on world generation
* Now if no resolution is suitable, select an unsuitable one
+ Added zorsan rifle weapon and research projects for it
* Planet scan window moved to separate screen
* Music is now loaded in separate threads and stored by SoftReference to prevent excessive memory usage and game start delays
* Updated Frankenstein to 0.1.1

====================================================

VERSION 0.2.0

11.03.2014

+ New story and dialogs, tons of them
+ Tools to load dialogs from CSV files
+ Added in-game story journal
+ Dungeon entrances on planet surface
+ Confirmation on exit game
+ Scan screen now shows areas of interest on planet
* Locale can now be read from properties